src/syntax/parse/snapshots/dilaria__syntax__parse__test__expr__equal_unary.snap
---
source: src/syntax/parse/test.rs
expression: ast
---
BinaryOp(
    BinaryOp {
        span: Span(
            0..0,
        ),
        lhs: Literal(
            Number(
                10.0,
                Span(
                    0..0,
                ),
            ),
        ),
        rhs: UnaryOp(
            UnaryOp {
                span: Span(
                    0..0,
                ),
                expr: Literal(
                    Number(
                        10.0,
                        Span(
                            0..0,
                        ),
                    ),
                ),
                kind: Neg,
            },
        ),
        kind: Equal,
    },
)
